--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-create-react-app",
+	"name": "@itvash/my-create-react-app",
 	"version": "1.0.0",
 	"private": false,
 	"dependencies": {
@@ -15,9 +15,6 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
-	},
-	"publishConfig": {
-		"registry": "https://npm.pkg.github.com/ITVash/"
 	},
 	"repository": {
 		"type": "git",
