--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-	"name": "@itvash/my-create-react-app",
-	"version": "1.0.0",
+	"name": "my-create-react-app",
+	"version": "1.0.1",
 	"private": false,
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"axios": "^0.20.0",
+		"classnames": "^2.2.6",
+		"immer": "^7.0.9",
+		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.3"
+		"react-redux": "^7.2.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.3",
+		"redux": "^4.0.5",
+		"redux-saga": "^1.1.3",
+		"reselect": "^4.0.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
