--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-	"name": "my-create-react-app",
+	"name": "map-gorsvet-project",
 	"version": "1.0.1",
 	"private": false,
 	"dependencies": {
+		"@ant-design/icons": "^4.2.2",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
@@ -16,6 +17,7 @@
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
+		"react-yandex-maps": "^4.4.0",
 		"redux": "^4.0.5",
 		"redux-saga": "^1.1.3",
 		"reselect": "^4.0.0"
